# my_humanoid_robot

./: CMakeLists.txt  KASPARConfig.cmake  KASPAR_ROOT.ini  README.md  kasparmodConfig.cmake
src/: CMakeLists.txt
src/FirstIITSensorTest/: CMakeLists.txt
src/FirstIITSensorTest/include/iCub/: TouchSensor.h
src/FirstIITSensorTest/src/: SkinMeshThread.cpp  Triangle.cpp  main.cpp
src/TactilePreprocessing/: CMakeLists.txt  sensorconf.ini  tactilePreprocessing.ini
src/TactilePreprocessing/conf/: skingroup_cheeks.ini  skingroup_leftarm.ini  skingroup_leftfoot.ini  skingroup_lefthand.ini  skingroup_rightarm.ini  skingroup_rightfoot.ini  skingroup_righthand.ini  skingroup_torso.ini
src/TactilePreprocessing/conf_linux/: skingroup_leftarm.ini  skingroup_leftfoot.ini  skingroup_lefthand.ini  skingroup_rightarm.ini  skingroup_righthand.ini  skingroup_torso.ini
src/TactilePreprocessing/src/: DataSample.cpp  SkinGroup.cpp  SkinSensors.cpp  TactileClassification.cpp  TactileData.cpp  TactileState.cpp  TemporalBuffer.cpp  circularBuffer.cpp  main.cpp  svm.cpp  tactilePreprocessing.cpp
src/TactilePreprocessing/src/include/: DataSample.h  SkinBodyPart.h  SkinGroup.h  SkinSensors.h  TactileData.h  TactileState.h  TemporalBuffer.h  TouchSensor.h  circularBuffer.h  tactilePreprocessing.h
src/TactilePreprocessing/test/: CMakeLists.txt  test1.cpp
src/TactilePreprocessing/traindata/: cheeks.train  cheeks.train.model  leftarm.train  leftarm.train.model  leftfoot.train  leftfoot.train.model  lefthand.train  lefthand.train.model  rightarm.train  rightarm.train.model  rightfoot.train  rightfoot.train.model  righthand.train  righthand.train.model  torso.train  torso.train.model
src/actionDecision/: CMakeLists.txt  notes.txt
src/actionDecision/include/: ActionCommand.h  ActionCommand.h~  ActionDecision.h  ClassificationEvent.h  ClassificationEvent.h~  EventActionPair.h  EventActionPair.h~  KeyboardEvent.h  SinglePartEvent.h  SinglePartEvent.h~  TouchEvent.h  TouchEvent.h~
src/actionDecision/pyYarp/: test.py  yarp.py
src/actionDecision/src/: ActionDecision.cpp  ActionDecision.cpp~  ClassificationEvent.cpp  KeyboardEvent.cpp  main.cpp  main.cpp~
src/actionExecutor/: CMakeLists.txt
src/actionExecutor/include/: ActionExecutor.h  KasparPose.h  KasparPose.h~  KasparSequence.h  KasparSequence.h~  KasparSequences.h  MotorExecution.h  Servo.h  ServoGroup.h  ServoPosition.h  Servos.h  SoundPlay.h
src/actionExecutor/include/utils/: Resources.h  Tokenizer.h  Utils.h
src/actionExecutor/src/: ActionExecutor.cpp  ActionExecutor.cpp~  KasparPose.cpp  KasparPose.cpp~  KasparSequences.cpp  MotorExecution.cpp  ServoGroup.cpp  ServoPosition.cpp  ServoPosition.cpp~  Servos.cpp  Tokenizer.cpp  main.cpp
src/actionExecutor/tools/: test.py  yarp.i  yarp.py
src/datalogger/: CMakeLists.txt
src/datalogger/src/: main.cpp
src/datalogger/src/include/: Fingertip.h  MainThread.h  SkinPart.h  TouchSensor.h  Triangle.h
src/dynamixel_test/: CMakeLists.txt  drivers.h  motortest.cpp
src/fakeskin/: CMakeLists.txt  FakeSkin.h  Tokenizer.h  fakeskinconfig.ini  main.cpp
src/fakeskin/cfgfiles/: cheeks_setting.ini  fakeskinconfig.ini  leftarm_setting.ini  leftfoot_setting.ini  lefthand_bottom_setting.ini  lefthand_top_setting.ini  rightarm_setting.ini  rightfoot_setting.ini  righthand_bottom_setting.ini  righthand_top_setting.ini  torso_setting.ini
src/fakeskin/tools/: CMakeLists.txt  main.cpp
src/guiManager/: CMakeLists.txt
src/guiManager/include/gui/: MainFrame.h
src/guiManager/src/: main.cpp
src/guiManager/src/gui/: MainFrame.cpp
src/kasparBehaviour/: CMakeLists.txt  Kaspar1c.xml  Kaspar_control_software_arch.mm  kaspar1c_new.cfg  kasparRoboSkin.xml  user_mode_win.cfg  user_mode_win_office.cfg  user_mode_win_office_new.cfg
src/kasparBehaviour/SkinData/: KASPAR_cheeks.ini  KASPAR_leftarm.ini  KASPAR_leftarm_conf.ini  KASPAR_leftfoot.ini  KASPAR_lefthand_bottom_conf.ini  KASPAR_lefthand_top.ini  KASPAR_rightarm_conf.ini  KASPAR_rightfoot.ini  KASPAR_righthand_bottom.ini  KASPAR_righthand_top.ini  KASPAR_righthand_top_conf.ini  kaspar.ini
src/kasparBehaviour/src/: main.cpp
src/kasparBehaviour/src/behaviour/: APFMode.cpp  AutonomousMode.cpp  BehaviourManager.cpp  BehaviourMode.cpp  MotorExecution.cpp  ServoGroup.cpp  ServoPosition.cpp  Servos.cpp
src/kasparBehaviour/src/gui/: MainFrame.cpp
src/kasparBehaviour/src/include/: APFMode.h  AutonomousMode.h  BehaviourManager.h  BehaviourMode.h  KasparPose.h  KasparSequence.h  KasparSequenceMap.h  KasparSequenceStep.h  MotorExecution.h  ServoPosition.h  Servos.h  (+4 more)
src/kasparBehaviour2/: CMakeLists.txt  README  config.ini
src/kasparBehaviour2/src/: main.cpp
src/modules/: CMakeLists.txt
src/modules/DynamixelAX12FtdiDriver/: AX12SyncPacket.h  AX12TxPacket.h  CMakeLists.txt  DynamixelAX12FtdiDriver.cpp  DynamixelAX12FtdiDriver.h  motortest.cpp
src/modules/UHskinprototype/: CMakeLists.txt  TriangleSensor.h  card.h  test.cpp  uhskinprototype.cpp  uhskinprototype.h
src/modules/ax12motor/: AX12Connection.h  AX12Motor.cpp  AX12Motor.h  AX12Packet.h  AX12RxPacket.h  CMakeLists.txt
src/modules/dynamixelAx12/: CMakeLists.txt  dynamixelAx12.cpp  dynamixelAx12.h
src/modules/esdCan/: CMakeLists.txt
src/modules/fsrTouchSensor/: CMakeLists.txt  FSRTouchSensor.cpp  FSRTouchSensor.h  TouchSensorData.h
src/modules/kasparServos/: CMakeLists.txt  kasparRoboSkin.cfg  kasparServos.cpp  kasparServos.h  servos.cfg
src/modules/qFsrSensor/: CMakeLists.txt  QFSRTouchSensor.cpp  QFSRTouchSensor.h  QTouchSensorData.h
src/modules/skinprototype/: CMakeLists.txt
src/pyActionDecision/src/: Getch.py  TactileStates.py  TouchEvent.py  pyActionDecision.py
src/tactile_saliency/: CMakeLists.txt  tactileSaliency.cpp
src/testsound/: CMakeLists.txt
src/testsound/include/: SoundPlay.h  TestSound.h
src/testsound/src/: main.cpp
tools/convertKasparXML/: CMakeLists.txt  convertKasparXML.cpp  convertKasparXML.h  main.cpp
tools/createActionDecisionXML/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.h  createKeymapXML.cpp  createKeymapXML.h  main.cpp  utils.h
(+182 files in other folders)
