
IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(dynamixelAX12FtdiDriver TYPE DynamixelAX12FtdiDriver INCLUDE "DynamixelAX12FtdiDriver.h" WRAPPER controlboard)
ENDIF (COMPILE_DEVICE_LIBRARY)

IF (NOT SKIP_dynamixelAX12FtdiDriver)
	FIND_PACKAGE(ACE)
  
  FIND_PACKAGE(YARP REQUIRED)
  FIND_PACKAGE(FTDI REQUIRED)
  INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS}  ${ACE_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${FTDI_INCLUDE_DIR})
  #ADD_DEFINITIONS(-DNODEFAULTLIB:library)

  IF(WIN32)
	FIND_PACKAGE(USB REQUIRED)
	INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIR})
	LINK_LIBRARIES(${LIBUSB_LIBRARIES})
  ENDIF(WIN32)
  ADD_LIBRARY(dynamixelAX12FtdiDriver DynamixelAX12FtdiDriver.cpp DynamixelAX12FtdiDriver.h)
  #TARGET_LINK_LIBRARIES(dynamixelAX12FtdiDriver ${YARP_LIBRARIES} ftdi)
  TARGET_LINK_LIBRARIES(dynamixelAX12FtdiDriver ${YARP_LIBRARIES} ${FTDI_LIBRARY})
ENDIF (NOT SKIP_dynamixelAX12FtdiDriver)


