FIND_PACKAGE(YARP REQUIRED)
FIND_PACKAGE(KASPAR)
FIND_PACKAGE(GSL REQUIRED)
FIND_PACKAGE(ACE REQUIRED)
INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${KASPAR_INCLUDE_DIRS})

IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(UHskinprototype TYPE UHSkinPrototype INCLUDE uhskinprototype.h  WRAPPER "analogsensorclient")
ENDIF (COMPILE_DEVICE_LIBRARY)

IF(USE_KASPAR_MOD)
    ADD_DEFINITIONS(-DUSE_KASPAR_MOD)
    FIND_PACKAGE(kasparmod)
    IMPORT_DEVICES("${KASPAR_DIR}/src/modules/UHskinprototype/drivers.h" kasparmod)
ENDIF (USE_KASPAR_MOD)

IF (NOT SKIP_static_grabber)
ADD_LIBRARY(UHskinprototype uhskinprototype.h uhskinprototype.cpp)
TARGET_LINK_LIBRARIES(UHskinprototype ${GSL_LIBRARIES} ${YARP_LIBRARIES})

ENDIF (NOT SKIP_static_grabber)
ADD_EXECUTABLE(testskin test.cpp)
TARGET_LINK_LIBRARIES(testskin ${KASPAR_LIBRARIES} ${YARP_LIBRARIES} ${ACE_LIBRARIES})
