
IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(ax12motor TYPE AX12Motor INCLUDE "AX12Motor.h")
ENDIF (COMPILE_DEVICE_LIBRARY)

IF (NOT SKIP_ax12motor)

  FIND_PACKAGE(YARP REQUIRED)

  INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  ADD_LIBRARY(ax12motor AX12Motor.cpp AX12Motor.h)
  TARGET_LINK_LIBRARIES(ax12motor ${YARP_LIBRARIES})

ENDIF (NOT SKIP_ax12motor)


