#FIND_PACKAGE(YARP REQUIRED)

#SET(MYLIBRARIES serial)
#LINK_LIBRARIES(serial)
#IF(YARP_FOUND)
#MESSAGE(STATUS ${YARP_DIR})
#INCLUDE_DIRECTORIES(${YARP_DIR}/src/modules)
#ENDIF(YARP_FOUND)

IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(fsrTouchSensor TYPE FSRTouchSensor INCLUDE "FSRTouchSensor.h" WRAPPER "analogsensorclient")
ENDIF (COMPILE_DEVICE_LIBRARY)

IF (NOT SKIP_fsrTouchSensor)
  FIND_PACKAGE(YARP REQUIRED)
  FIND_PACKAGE(FTDI REQUIRED)

  #... find and use other needed libraries ...

  INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${FTDI_INCLUDE_DIR})
  ADD_LIBRARY(fsrTouchSensor FSRTouchSensor.cpp FSRTouchSensor.h)
  #TARGET_LINK_LIBRARIES(fsrTouchSensor ftdi)
  TARGET_LINK_LIBRARIES(fsrTouchSensor ${FTDI_LIBRARY})
ENDIF (NOT SKIP_fsrTouchSensor)


