
IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(KasparServos TYPE KasparServos INCLUDE "kasparServos.h" WRAPPER controlboard)
#  PREPARE_DEVICE(dynamixelAx12 TYPE DynamixelAX12 INCLUDE dynamixelAx12.h)
ENDIF (COMPILE_DEVICE_LIBRARY)



IF (NOT SKIP_KasparServos)

#SET(QEXT_INC "D:/yarp_libraries/qextserialport/src")
#SET(QEXT_LIB "D:/yarp_libraries/qextserialport/src/build")
FIND_PACKAGE(ACE)
FIND_PACKAGE(YARP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
  
FIND_PACKAGE(QEXTSERIAL REQUIRED)

#  FIND_PACKAGE(FTDI REQUIRED)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS}  ${ACE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
#INCLUDE_DIRECTORIES(${QEXT_INC})
INCLUDE_DIRECTORIES(${QEXTSERIAL_INC_DIRS})
#INCLUDE_DIRECTORIES(${FTDI_INCLUDE_DIR})
include(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
   ${QT_INCLUDE_DIR}
   ${QT_QTNETWORK_INCLUDE_DIR}
   ${QT_QTTEST_INCLUDE_DIR}
)
ADD_LIBRARY(KasparServos kasparServos.cpp kasparServos.h )
#TARGET_LINK_LIBRARIES(dynamixelAX12FtdiDriver ${YARP_LIBRARIES} ftdi)
TARGET_LINK_LIBRARIES(KasparServos ${YARP_LIBRARIES} ${QEXTSERIAL_LIB} ${QT_LIBRARIES})
#TARGET_LINK_LIBRARIES(dynamixelAx12 ${YARP_LIBRARIES} ${QEXT_LIB}/qextserialport1.lib ${QEXT_LIB}/qextserialportd1.lib ${QT_LIBRARIES})
ENDIF (NOT SKIP_KasparServos)
