#FIND_PACKAGE(YARP REQUIRED)

#SET(MYLIBRARIES serial)
#LINK_LIBRARIES(serial)
#IF(YARP_FOUND)
#MESSAGE(STATUS ${YARP_DIR})
#INCLUDE_DIRECTORIES(${YARP_DIR}/src/modules)
#ENDIF(YARP_FOUND)

IF (COMPILE_DEVICE_LIBRARY)
  PREPARE_DEVICE(qFsrSensor TYPE QFSRTouchSensor INCLUDE "QFSRTouchSensor.h" WRAPPER "analogsensorclient")
ENDIF (COMPILE_DEVICE_LIBRARY)

IF (NOT SKIP_qFsrSensor)
  FIND_PACKAGE(YARP REQUIRED)
  #FIND_PACKAGE(FTDI REQUIRED)
  FIND_PACKAGE(Qt4 REQUIRED)
  FIND_PACKAGE(ACE REQUIRED)
  FIND_PACKAGE(QEXTSERIAL REQUIRED)

  #... find and use other needed libraries ...

  INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIRS})
  #INCLUDE_DIRECTORIES(${FTDI_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${QEXTSERIAL_INC_DIRS})
  include(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
   ${QT_INCLUDE_DIR}
   ${QT_QTNETWORK_INCLUDE_DIR}
   ${QT_QTTEST_INCLUDE_DIR}
)
LINK_LIBRARIES(${ACE_LIBRARIES})
  ADD_LIBRARY(qFsrSensor QFSRTouchSensor.cpp QFSRTouchSensor.h)
  TARGET_LINK_LIBRARIES(qFsrSensor ${YARP_LIBRARIES} ${QEXTSERIAL_LIB} ${QT_LIBRARIES})
  #TARGET_LINK_LIBRARIES(fsrTouchSensor ${FTDI_LIBRARY})
ENDIF (NOT SKIP_qFsrSensor)


